--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -13,4 +13,8 @@ akka {
     seed-nodes = ["akka.tcp://pubsub@10.99.99.51:2551"]
     auto-down-unreachable-after = 5s
   }
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  log-dead-letters = 0
+  log-dead-letters-during-shutdown = off
+  log-config-on-start = off
 }
