Gossip every 5s to slow things down

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,6 +12,7 @@ akka {
   cluster {
     seed-nodes = ["akka.tcp://pubsub@10.99.99.51:2551"]
     auto-down-unreachable-after = 5s
+    pub-sub.gossip-interval = 5s
   }
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   log-dead-letters = 0
